apps/frontend/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-site
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - site.79.174.84.176.sslip.io
      secretName: prod-site-tls
  rules:
    - host: site.79.174.84.176.sslip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prod-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-web
                port:
                  number: 80
